Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-80649

--namespace option of RCC is broken

    XMLWordPrintable

Details

    • 42aa740df72af0c14f19a498f779d130e8303e54 (qt/qtbase/5.14)

    Description

      If I pass the --namespace option to RCC I get this output:

      bool qRegisterResourceData(int, const unsigned char *, const unsigned char *, const unsigned char *);
      bool qUnregisterResourceData(int, const unsigned char *, const unsigned char *, const unsigned char *);
      
      int qInitResources();
      int qInitResources()
      {
          int version = 3;
          qRegisterResourceData
              (version, qt_resource_struct, qt_resource_name, qt_resource_data);
          return 1;
      }
      
      int qCleanupResources();
      int qCleanupResources()
      {
          int version = 3;
          qUnregisterResourceData
             (version, qt_resource_struct, qt_resource_name, qt_resource_data);
          return 1;
      }
      
      namespace {
         struct initializer {
             initializer() { QT_RCC_MANGLE_NAMESPACE(qInitResources)(); }
             ~initializer() { QT_RCC_MANGLE_NAMESPACE(qCleanupResources)(); }
         } dummy;
      }
      

      This still uses the QT_RCC_MANGLE_NAMESPACE macro which isn't defined.

      Attachments

        For Gerrit Dashboard: QTBUG-80649
        # Subject Branch Project Status CR V

        Activity

          People

            sgaist Samuel Gaist
            kerndog73 Indi Kernick
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes